# motorino

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: compiler_options.cmake
include/nkgt/: logger.hpp  renderer.hpp
samples/triangle/: CMakeLists.txt  triangle.cpp
src/: renderer.cpp
